# bt-servant-whatsapp-gateway

./: .dev.vars.example  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vitest.config.ts  wrangler.toml
.github/workflows/: ci-pr.yml  ci.yml  deploy-staging.yml  deploy.yml
src/: index.ts
src/config/: types.ts
src/services/: chunking.ts  engine-client.ts  media-extractor.ts  message-handler.ts
src/services/meta-api/: client.ts  error-codes.ts  signature.ts  status-webhook.ts
src/types/: engine.ts  meta.ts
src/utils/: crypto.ts  logger.ts  url.ts
tests/: conftest.py
tests/core/: test_models.py
tests/e2e/: webhook.test.ts
tests/meta_api/: __init__.py  test_signature.py
tests/routes/: __init__.py  test_webhooks.py
tests/services/: test_chunking.py  test_engine_client.py  test_message_handler.py
tests/unit/: audio.test.ts  chunking.test.ts  engine-client.test.ts  handle-callback-attachments.test.ts  handle-callback-media.test.ts  media-extractor.test.ts  meta-client-document.test.ts  meta-client-media.test.ts  signature.test.ts  webhook-statuses.test.ts
whatsapp_gateway/: __init__.py  config.py  main.py
whatsapp_gateway/core/: __init__.py  models.py
whatsapp_gateway/meta_api/: __init__.py  client.py  signature.py
whatsapp_gateway/routes/: __init__.py  health.py  webhooks.py
whatsapp_gateway/services/: __init__.py  chunking.py  engine_client.py  message_handler.py
